--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
    <div class="emoji">
      ❤️❤️❤️❤️❤️ 
    </div>
-   <p>LET'S PLAY WITH ME?</p> 
-   <button class="button" onclick="goToIndex()">START</button> 
+   <p>TTWO PEOPLE LOVE EACH OTHER</p> 
+   <button class="button" onclick="goToIndex()">CLICK HERE</button> 
   </div> 
  </body>
 </html>
