--- a/Music.html
+++ b/Music.html
@@ -114,7 +114,7 @@
   <div class="container"> 
    <div class="player"> 
     <img src="src/Music-Pebi.jpg" alt=""> 
-    <h2>Pebi</h2> 
+    <h2>Abadi - Dendi Nata</h2> 
     <p></p> 
     <div class="progress"> <span id="current-time-1">00:00</span> 
      <div class="progress-bar"> <span></span> 
@@ -128,7 +128,7 @@
    </div> 
    <div class="player"> 
     <img src="src/Music-Nje.jpg" alt=""> 
-    <h2>Nje</h2> 
+    <h2>Reckless - Madison Beer</h2> 
     <p></p> 
     <div class="progress"> <span id="current-time-2">00:00</span> 
      <div class="progress-bar"> <span></span> 
