--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             src: url('https://fonts.cdnfonts.com/s/41630/PressStart2P-Regular.woff') format('woff');
         }
         body {
-            background: url('https://media.giphy.com/media/B8LkH5Fz2kmw8/giphy.gif') no-repeat center center fixed;
+            background: url('https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif') no-repeat center center fixed;
             background-size: cover;
             color: white; 
             display: flex;
