--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           font-weight: 990;
         }
         .button {
-            background-color: #4b0082; /* Warna ungu */
+            background-color: #ffc0cb; /* Warna ungu */
             color: white;
-            border: 2px solid #4b0082; /* Warna ungu */
+            border: 2px solid #ffc0cb; /* Warna ungu */
             padding: 10px 20px;
             text-align: center;
             text-decoration: none;
@@ -42,12 +42,12 @@
             font-family: 'PressStart2P', cursive;
         }
         .button:hover {
-            background-color: #2e004b; /* Warna ungu gelap */
+            background-color: #ffc0cb; /* Warna ungu gelap */
             transform: translateY(-2px);
         }
         .emoji {
-            font-size: 30px;
-            margin-top: 20px;
+            font-size: 50px;
+            margin-top: 40px;
         }
     </style> 
     <script>
@@ -61,7 +61,7 @@
    <div class="emoji">
      ❤️❤️❤️❤️❤️ 
    </div>
-   <p>TTWO PEOPLE LOVE EACH OTHER</p> 
+   <p>TWO PEOPLE LOVE EACH OTHER</p> 
    <button class="button" onclick="goToIndex()">CLICK HERE</button> 
   </div> 
  </body>
