--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title></title> 
   <style>
         @font-face {
-            font-family: 'PressStart2P';
-            src: url('https://fonts.cdnfonts.com/s/41630/PressStart2P-Regular.woff') format('woff');
+            font-family: 'Fantasy';
         }
         body {
             background: url('https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif') no-repeat center center fixed;
