--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
         @font-face {
             font-family: 'Fantasy';
+            src: url('https://fonts.cdnfonts.com/s/41630/PressStart2P-Regular.woff') format('woff');
         }
         body {
             background: url('https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif') no-repeat center center fixed;
