--- a/Picture.html
+++ b/Picture.html
@@ -9,7 +9,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
         
     body {
-        background: url('src/Background.jpg') no-repeat center center fixed;
+        background: url('https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif') no-repeat center center fixed;
         background-size: cover;
         color: white;
         display: flex;
@@ -68,7 +68,7 @@
 </head> 
 <body> 
   <div class="container">
-    <img src="src/KamuDanAku.jpg" alt="Photo"> 
+    <img src="https://cdn.discordapp.com/attachments/849188337943969802/1284935207421739193/dac4209b-0a12-45b9-b1c5-b6eb952eeb28.jpg?ex=66e870aa&is=66e71f2a&hm=47480996fc9810435c31e028c415aab5d16a5eb697b44afad12e7520d9075404&" alt="Photo"> 
     <img src="src/Profile.jpg" alt="Photo">
     <img src="src/Pebi.jpg" alt="Photo 1"> 
     <img src="src/Nje.jpg" alt="Photo 2"> 
@@ -80,7 +80,7 @@
   <div class="footer"> 
     <a href="Home.html"> 
       <i class="fas fa-arrow-left"></i> 
-      <span style="font-family: 'Bebas Neue', cursive;">Kembali</span>
+      <span style="font-family: 'Bebas Neue', cursive;">BACK</span>
     </a> 
   </div> 
 </body>
