--- a/Picture.html
+++ b/Picture.html
@@ -68,7 +68,7 @@
 </head> 
 <body> 
   <div class="container">
-    <img src="https://cdn.discordapp.com/attachments/849188337943969802/1284935207421739193/dac4209b-0a12-45b9-b1c5-b6eb952eeb28.jpg?ex=66e870aa&is=66e71f2a&hm=47480996fc9810435c31e028c415aab5d16a5eb697b44afad12e7520d9075404&" alt="Photo"> 
+    <img src="src/KamuDanAKu.jpg" alt="Photo"> 
     <img src="src/Profile.jpg" alt="Photo">
     <img src="src/Pebi.jpg" alt="Photo 1"> 
     <img src="src/Nje.jpg" alt="Photo 2"> 
