--- a/Picture.html
+++ b/Picture.html
@@ -68,7 +68,7 @@
 </head> 
 <body> 
   <div class="container">
-    <img src="src/KamuDanAKu.jpg" alt="Photo"> 
+    <img src="src/KamuDanAku.jpg" alt="Photo"> 
     <img src="src/Profile.jpg" alt="Photo">
     <img src="src/Pebi.jpg" alt="Photo 1"> 
     <img src="src/Nje.jpg" alt="Photo 2"> 
