--- a/Picture.html
+++ b/Picture.html
@@ -25,17 +25,17 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 10px;
-        width: 80%;
-        max-width: 500px;
+        width: 70%; /* Decreased width to make images smaller */
+        max-width: 400px; /* Adjusted max-width */
         padding-bottom: 20px;
         align-items: center;
         margin-top: 100px;
     }
     
     .container img {
-        width: 100%; /* Set to 100% of the grid column width */
-        height: 250px; /* Fixed height to ensure uniformity */
-        object-fit: cover; /* Ensures that the image is cropped properly while maintaining aspect ratio */
+        width: 100%; 
+        height: 180px; /* Reduced height to make images smaller */
+        object-fit: cover; 
         border-radius: 10px;
     }
     
