--- a/Picture.html
+++ b/Picture.html
@@ -75,7 +75,7 @@
     <img src="src/Nje.jpg" alt="Photo 2"> 
     <img src="src/Pebii.jpg" alt="Photo 3"> 
     <img src="src/Njee.jpg" alt="Photo 4"> 
-    <img src="src/Pebiii.jpg" alt="Photo 5"> 
+    <img src="src/Pebiii.png" alt="Photo 5"> 
     <img src="src/Njeee.jpg" alt="Photo 6">
   </div>
   <div class="footer"> 
