--- a/Music.html
+++ b/Music.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> 
   <style>
         body {
-            background: url('src/Background.jpg') no-repeat center center fixed;
+            background: url('https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif') no-repeat center center fixed;
             background-size: cover;
             color: white;
             display: flex;
@@ -142,7 +142,7 @@
    </div> 
   </div> 
   <div class="footer"> 
-    <a href="Home.html"><i class="fas fa-arrow-left"></i><span>Kembali</span></a> 
+    <a href="Home.html"><i class="fas fa-arrow-left"></i><span>BACK</span></a> 
   </div> 
   <script>
         const players = [
