--- a/Message.html
+++ b/Message.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&display=swap');
 
         body {
-            background: url('src/Background.jpg') no-repeat center center fixed;
+            background: url('https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif') no-repeat center center fixed;
             background-size: cover;
             color: white;
             display: flex;
@@ -86,7 +86,7 @@
     <div class="footer"> 
         <a href="Home.html"> 
             <i class="fas fa-arrow-left"></i> 
-            <span style="font-family: 'Bebas Neue', cursive;">Kembali</span>
+            <span style="font-family: 'Bebas Neue', cursive;">BACK</span>
         </a> 
     </div> 
 </body>
