--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&amp;display=swap" rel="stylesheet"> 
   <style>
         body {
-            background: url('src/Background.jpg') no-repeat center center fixed;
+            background: url('https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif') no-repeat center center fixed;
             background-size: cover;
             color: white;
             display: flex;
@@ -44,11 +44,11 @@
   <div class="container"> 
     <a href="Picture.html" class="icon"> 
       <i class="fas fa-image"></i>
-      <span>Gambar</span> 
+      <span>Memories</span> 
     </a> 
     <a href="Time.html" class="icon"> 
       <i class="fas fa-clock"></i>
-      <span>Waktu</span> 
+      <span>Time</span> 
     </a> 
     <a href="Games.html" class="icon"> 
       <i class="fas fa-gamepad"></i>
@@ -56,11 +56,11 @@
     </a> 
     <a href="Message.html" class="icon"> 
       <i class="fas fa-envelope"></i>
-      <span>Pesan</span> 
+      <span>Poets</span> 
     </a> 
     <a href="Music.html" class="icon"> 
       <i class="fas fa-music"></i>
-      <span>Lagu</span> 
+      <span>Music</span> 
     </a> 
   </div> 
  </body>
