--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title></title> 
   <style>
-        @font-face {
-            font-family: 'Fantasy';
-            src: url('https://fonts.cdnfonts.com/s/41630/PressStart2P-Regular.woff') format('woff');
-        }
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&display=swap');
+   
         body {
             background: url('https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif') no-repeat center center fixed;
             background-size: cover;
