--- a/Home.html
+++ b/Home.html
@@ -41,26 +41,30 @@
     </style> 
  </head> 
  <body> 
-  <div class="container"> 
-    <a href="Picture.html" class="icon"> 
-      <i class="fas fa-image"></i>
-      <span>Memories</span> 
-    </a> 
-    <a href="Time.html" class="icon"> 
-      <i class="fas fa-clock"></i>
-      <span>Time</span> 
-    </a> 
-    <a href="Games.html" class="icon"> 
-      <i class="fas fa-gamepad"></i>
-      <span>Games</span> 
-    </a> 
-    <a href="Message.html" class="icon"> 
-      <i class="fas fa-envelope"></i>
-      <span>Poets</span> 
-    </a> 
-    <a href="Music.html" class="icon"> 
-      <i class="fas fa-music"></i>
-      <span>Music</span> 
+<div class="container"> 
+  <a href="Picture.html" class="icon"> 
+    <i class="fas fa-image"></i>
+    <span>Memories</span> 
+  </a> 
+  <a href="Time.html" class="icon"> 
+    <i class="fas fa-clock"></i>
+    <span>Time</span> 
+  </a> 
+  <a href="Games.html" class="icon"> 
+    <i class="fas fa-gamepad"></i>
+    <span>Games</span> 
+  </a> 
+  <a href="Message.html" class="icon"> 
+    <i class="fas fa-envelope"></i>
+    <span>Poets</span> 
+  </a> 
+  <a href="Music.html" class="icon"> 
+    <i class="fas fa-music"></i>
+    <span>Music</span> 
+  </a> 
+  <a href="Visitor.html" class="icon"> 
+    <i class="fas fa-user"></i>
+    <span>Visitor</span> 
     </a> 
   </div> 
  </body>
