--- a/Picture.html
+++ b/Picture.html
@@ -22,14 +22,19 @@
     }
     
     .container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-        width: 35%; /* Decreased width to make images smaller */
-        max-width: 400px; /* Adjusted max-width */
-        padding-bottom: 20px;
-        align-items: center;
-        margin-top: 100px;
+        display: flex;
+        width: max-content;
+        gap: 1rem;
+    }
+
+    .horizontal-scroll {
+        width: 100%;
+        overflow-x: scroll;
+        scrollbar-color: transparent transparent;
+    }
+
+    .horizontal-scroll::-webkit-scrollbar {
+        display: none;
     }
     
     .container img {
@@ -68,6 +73,7 @@
   </style> 
 </head> 
 <body> 
+  <div className="horizontal-scroll">
   <div class="container">
     <img src="src/KamuDanAku.jpg" alt="Photo"> 
     <img src="src/Profile.jpg" alt="Photo">
@@ -78,6 +84,7 @@
     <img src="src/Pebiii.png" alt="Photo 5"> 
     <img src="src/Njeee.jpg" alt="Photo 6">
   </div>
+      </div>
   <div class="footer"> 
     <a href="Home.html"> 
       <i class="fas fa-arrow-left"></i> 
