--- a/Picture.html
+++ b/Picture.html
@@ -67,14 +67,21 @@
 <body> 
   <div className="horizontal-scroll">
   <div className="container">
-    <img src="src/KamuDanAku.jpg" alt="Photo"> 
-    <img src="src/Profile.jpg" alt="Photo">
-    <img src="src/Pebi.jpg" alt="Photo 1"> 
-    <img src="src/Nje.jpg" alt="Photo 2"> 
-    <img src="src/Pebii.jpg" alt="Photo 3"> 
-    <img src="src/Njee.jpg" alt="Photo 4"> 
-    <img src="src/Pebiii.png" alt="Photo 5"> 
-    <img src="src/Njeee.jpg" alt="Photo 6">
+   <div className="item">
+   <div className="item">
+   </div>
+   <div className="item">
+   </div>
+    <div className="item">
+   </div>
+     <div className="item">
+   </div>
+     <div className="item">
+   </div>
+     <div className="item">
+   </div>
+     <div className="item">
+   </div>
   </div>
      </div>
   <div class="footer"> 
