--- a/Picture.html
+++ b/Picture.html
@@ -67,20 +67,20 @@
 <body> 
   <div className="horizontal-scroll">
   <div className="container">
-   <div className="item">
-   <div className="item">
+   <div className="src/Profile.jpg">
+   <div className="src/Profile.jpg">
    </div>
-   <div className="item">
+   <div className="src/Profile.jpg">
    </div>
-    <div className="item">
+    <div className="src/Profile.jpg">
    </div>
-     <div className="item">
+     <div className="src/Profile.jpg">
    </div>
-     <div className="item">
+     <div className="src/Profile.jpg">
    </div>
-     <div className="item">
+     <div className="src/Profile.jpg">
    </div>
-     <div className="item">
+     <div className="src/Profile.jpg">
    </div>
   </div>
      </div>
