--- a/test.html
+++ b/test.html
@@ -1,1 +1,102 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scrollable Image Gallery</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f0f0;
+        }
+        .gallery-container {
+            position: relative;
+            max-width: 100%;
+            overflow: hidden;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+        .gallery {
+            display: flex;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
+            -webkit-overflow-scrolling: touch;
+            padding: 20px;
+        }
+        .gallery::-webkit-scrollbar {
+            width: 10px;
+            height: 10px;
+        }
+        .gallery::-webkit-scrollbar-thumb {
+            background: #888;
+            border-radius: 10px;
+        }
+        .gallery::-webkit-scrollbar-track {
+            background: #ddd;
+            border-radius: 10px;
+        }
+        .gallery-item {
+            flex: 0 0 auto;
+            width: 300px;
+            height: 200px;
+            scroll-snap-align: start;
+            margin-right: 20px;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .nav-button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(255, 255, 255, 0.7);
+            border: none;
+            font-size: 24px;
+            padding: 10px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .nav-button:hover {
+            background-color: rgba(255, 255, 255, 0.9);
+        }
+        .prev {
+            left: 10px;
+        }
+        .next {
+            right: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="gallery-container">
+        <div class="gallery" id="gallery">
+            <div class="gallery-item"><img src="src/Nje.jpg" alt="Image 1"></div>
+            <div class="gallery-item"><img src="src/njee.jpg" alt="Image 2"></div>
+            <div class="gallery-item"><img src="src/pebi.jpg" alt="Image 3"></div>
+            <div class="gallery-item"><img src="src/njeee.jpg" alt="Image 4"></div>
+            <div class="gallery-item"><img src="src/pebii.jpg" alt="Image 5"></div>
+        </div>
+        <button class="nav-button prev" onclick="scroll(-1)">&lt;</button>
+        <button class="nav-button next" onclick="scroll(1)">&gt;</button>
+    </div>
 
+    <script>
+        function scroll(direction) {
+            const gallery = document.getElementById('gallery');
+            const scrollAmount = 320; // Adjust based on image width + margin
+            gallery.scrollBy({
+                left: direction * scrollAmount,
+                behavior: 'smooth'
+            });
+        }
+    </script>
+</body>
+</html>
