--- a/test.html
+++ b/test.html
@@ -82,11 +82,11 @@
     <div class="page-container">
         <div class="gallery-container">
             <div class="gallery" id="gallery">
-                <div class="gallery-item"><img src="/src/KamuDanAku.jpg" alt="Image 1"></div>
-                <div class="gallery-item"><img src="/src/Nje.jpg" alt="Image 2"></div>
-                <div class="gallery-item"><img src="/src/Njee.jpg" alt="Image 3"></div>
-                <div class="gallery-item"><img src="/src/Njeee.jpg" alt="Image 4"></div>
-                <div class="gallery-item"><img src="/src/Pebi.jpg" alt="Image 5"></div>
+                <div class="gallery-item"><img src="src/KamuDanAku.jpg" alt="Image 1"></div>
+                <div class="gallery-item"><img src="src/Nje.jpg" alt="Image 2"></div>
+                <div class="gallery-item"><img src="src/Njee.jpg" alt="Image 3"></div>
+                <div class="gallery-item"><img src="src/Njeee.jpg" alt="Image 4"></div>
+                <div class="gallery-item"><img src="src/Pebi.jpg" alt="Image 5"></div>
             </div>
             <button class="nav-button prev" onclick="scroll(-1)">&lt;</button>
             <button class="nav-button next" onclick="scroll(1)">&gt;</button>
