--- a/test.html
+++ b/test.html
@@ -55,27 +55,6 @@
             height: 100%;
             object-fit: cover;
         }
-        .nav-button {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: rgba(255, 255, 255, 0.7);
-            border: none;
-            font-size: 24px;
-            padding: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            z-index: 10;
-        }
-        .nav-button:hover {
-            background-color: rgba(255, 255, 255, 0.9);
-        }
-        .prev {
-            left: 10px;
-        }
-        .next {
-            right: 10px;
-        }
     </style>
 </head>
 <body>
@@ -88,33 +67,33 @@
                 <div class="gallery-item"><img src="src/Njeee.jpg" alt="Image 4"></div>
                 <div class="gallery-item"><img src="src/Pebi.jpg" alt="Image 5"></div>
             </div>
-            <button class="nav-button prev" onclick="scroll(-1)">&lt;</button>
-            <button class="nav-button next" onclick="scroll(1)">&gt;</button>
         </div>
     </div>
 
     <script>
-        function scroll(direction) {
+        // Auto scroll function
+        function autoScroll() {
             const gallery = document.getElementById('gallery');
             const scrollAmount = 340; // Width of gallery-item + its margin
-            gallery.scrollBy({
-                left: direction * scrollAmount,
-                behavior: 'smooth'
-            });
+
+            let scrollInterval = setInterval(() => {
+                gallery.scrollBy({
+                    left: scrollAmount,
+                    behavior: 'smooth'
+                });
+
+                // If reached the end, scroll back to start
+                if (gallery.scrollLeft + gallery.offsetWidth >= gallery.scrollWidth) {
+                    gallery.scrollTo({
+                        left: 0,
+                        behavior: 'smooth'
+                    });
+                }
+            }, 3000); // Scroll every 3 seconds
         }
 
-        // Center the first image on load
-        window.addEventListener('load', () => {
-            const gallery = document.getElementById('gallery');
-            const firstItem = gallery.firstElementChild;
-            if (firstItem) {
-                firstItem.scrollIntoView({
-                    behavior: 'auto',
-                    block: 'nearest',
-                    inline: 'center'
-                });
-            }
-        });
+        // Call autoScroll when the page loads
+        window.addEventListener('load', autoScroll);
     </script>
 </body>
 </html>
