--- a/test.html
+++ b/test.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centered Scrollable Image Gallery</title>
+    <title>Centered Scrollable Image Gallery with Background Music</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #ff69b4;
         }
         .page-container {
             display: flex;
@@ -58,6 +58,12 @@
     </style>
 </head>
 <body>
+    <!-- Background Music -->
+    <audio autoplay loop controls="hidden">
+        <source src="src/NjeFavMusic.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     <div class="page-container">
         <div class="gallery-container">
             <div class="gallery" id="gallery">
