--- a/test.html
+++ b/test.html
@@ -108,5 +108,12 @@
         // Call autoScroll when the page loads
         window.addEventListener('load', autoScroll);
     </script>
+    
+     <div class="footer"> 
+    <a href="Home.html"> 
+      <i class="fas fa-arrow-left"></i> 
+      <span style="font-family: 'Bebas Neue', cursive;">BACK</span>
+    </a> 
+    </div>
 </body>
 </html>
