--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eternity</title>
+    <title>Centered Scrollable Image Gallery with Background Music</title>
     <style>
         body, html {
             margin: 0;
@@ -71,12 +71,14 @@
             font-weight: bold;
             display: inline-block;
             padding: 10px 20px;
-            background-color: #333;
+            border: 2px solid #fff;
+            background-color: transparent; /* Transparent background */
             border-radius: 5px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, color 0.3s;
         }
         .back-button a:hover {
-            background-color: #555;
+            background-color: rgba(255, 255, 255, 0.3); /* Slightly transparent on hover */
+            color: #fff; /* Keep text color white on hover */
         }
         .back-icon {
             font-size: 24px;
@@ -108,7 +110,7 @@
         <!-- Back button section -->
         <div class="back-button">
             <a href="Home.html">
-                <span class="back-icon">⬅️</span> <!-- You can replace with an image icon if desired -->
+                <i class="fas fa-arrow-left"></i>
                 Back
             </a>
         </div>
@@ -133,7 +135,7 @@
                         behavior: 'smooth'
                     });
                 }
-            }, 3000); // Scroll every 3 seconds
+            }, 2000); // Scroll every 3 seconds
         }
 
         // Call autoScroll when the page loads
